Add all the keyboard keys for C4 to C5 notes of piano

--- a/day_01/index.html
+++ b/day_01/index.html
@@ -11,6 +11,34 @@
               <kbd>A</kbd> <!-- Create keyboard -->
               <span>Middle C</span>
           </div>
+          <div>
+            <kbd>S</kbd> <!-- Create keyboard -->
+            <span>Middle D</span>
+        </div>
+        <div>
+            <kbd>D</kbd> <!-- Create keyboard -->
+            <span>Middle E</span>
+        </div>
+        <div>
+            <kbd>F</kbd> <!-- Create keyboard -->
+            <span>Middle F</span>
+        </div>
+        <div>
+            <kbd>G</kbd> <!-- Create keyboard -->
+            <span>Middle G</span>
+        </div>
+        <div>
+            <kbd>H</kbd> <!-- Create keyboard -->
+            <span>Middle A</span>
+        </div>
+        <div>
+            <kbd>J</kbd> <!-- Create keyboard -->
+            <span>Middle B</span>
+        </div>
+        <div>
+            <kbd>K</kbd> <!-- Create keyboard -->
+            <span>C<sub>5</sub></span>
+        </div>
       </main>
   </body>
 </html>
