Add <audio> elements for the keys

--- a/day_01/index.html
+++ b/day_01/index.html
@@ -6,39 +6,63 @@
     <link rel="stylesheet" href="./public/css/style.css" />
   </head>
   <body>
-      <main class="keyboard-keys">
-          <div>
-              <kbd>A</kbd> <!-- Create keyboard -->
-              <span>Middle C</span>
-          </div>
-          <div>
-            <kbd>S</kbd> <!-- Create keyboard -->
-            <span>Middle D</span>
-        </div>
-        <div>
-            <kbd>D</kbd> <!-- Create keyboard -->
-            <span>Middle E</span>
-        </div>
-        <div>
-            <kbd>F</kbd> <!-- Create keyboard -->
-            <span>Middle F</span>
-        </div>
-        <div>
-            <kbd>G</kbd> <!-- Create keyboard -->
-            <span>Middle G</span>
-        </div>
-        <div>
-            <kbd>H</kbd> <!-- Create keyboard -->
-            <span>Middle A</span>
-        </div>
-        <div>
-            <kbd>J</kbd> <!-- Create keyboard -->
-            <span>Middle B</span>
-        </div>
-        <div>
-            <kbd>K</kbd> <!-- Create keyboard -->
-            <span>C<sub>5</sub></span>
-        </div>
-      </main>
+    <main class="keyboard-keys">
+      <div>
+        <kbd>A</kbd>
+        <!-- Create keyboard -->
+        <span>Middle C</span>
+      </div>
+      <div>
+        <kbd>S</kbd>
+        <!-- Create keyboard -->
+        <span>Middle D</span>
+      </div>
+      <div>
+        <kbd>D</kbd>
+        <!-- Create keyboard -->
+        <span>Middle E</span>
+      </div>
+      <div>
+        <kbd>F</kbd>
+        <!-- Create keyboard -->
+        <span>Middle F</span>
+      </div>
+      <div>
+        <kbd>G</kbd>
+        <!-- Create keyboard -->
+        <span>Middle G</span>
+      </div>
+      <div>
+        <kbd>H</kbd>
+        <!-- Create keyboard -->
+        <span>Middle A</span>
+      </div>
+      <div>
+        <kbd>J</kbd>
+        <!-- Create keyboard -->
+        <span>Middle B</span>
+      </div>
+      <div>
+        <kbd>K</kbd>
+        <!-- Create keyboard -->
+        <span>C<sub>5</sub></span>
+      </div>
+    </main>
+    <section>
+      <audio controls src="./public/sounds/middle_c.mp3"></audio>
+      <audio controls src="./public/sounds/middle_c.mp3"></audio>
+
+      <audio controls src="./public/sounds/middle_c.mp3"></audio>
+
+      <audio controls src="./public/sounds/middle_c.mp3"></audio>
+
+      <audio controls src="./public/sounds/middle_c.mp3"></audio>
+
+      <audio controls src="./public/sounds/middle_c.mp3"></audio>
+
+      <audio controls src="./public/sounds/middle_c.mp3"></audio>
+
+      <audio controls src="./public/sounds/middle_c.mp3"></audio>
+    </section>
   </body>
 </html>
