Make the main tag with class=keyboard-keys as flex container

--- a/day_01/index.html
+++ b/day_01/index.html
@@ -7,42 +7,42 @@
   </head>
   <body>
     <main class="keyboard-keys">
-      <div>
+      <div class="key">
         <kbd>A</kbd>
         <!-- Create keyboard -->
         <span>Middle C</span>
       </div>
-      <div>
+      <div class="key">
         <kbd>S</kbd>
         <!-- Create keyboard -->
         <span>Middle D</span>
       </div>
-      <div>
+      <div class="key">
         <kbd>D</kbd>
         <!-- Create keyboard -->
         <span>Middle E</span>
       </div>
-      <div>
+      <div class="key">
         <kbd>F</kbd>
         <!-- Create keyboard -->
         <span>Middle F</span>
       </div>
-      <div>
+      <div class="key">
         <kbd>G</kbd>
         <!-- Create keyboard -->
         <span>Middle G</span>
       </div>
-      <div>
+      <div class="key">
         <kbd>H</kbd>
         <!-- Create keyboard -->
         <span>Middle A</span>
       </div>
-      <div>
+      <div class="key">
         <kbd>J</kbd>
         <!-- Create keyboard -->
         <span>Middle B</span>
       </div>
-      <div>
+      <div class="key">
         <kbd>K</kbd>
         <!-- Create keyboard -->
         <span>C<sub>5</sub></span>
