Add styles to <span> tags inside the "key" div elements

--- a/day_01/index.html
+++ b/day_01/index.html
@@ -10,42 +10,42 @@
       <div class="key">
         <kbd>A</kbd>
         <!-- Create keyboard -->
-        <span>Middle C</span>
+        <span class="sound">Middle C</span>
       </div>
       <div class="key">
         <kbd>S</kbd>
         <!-- Create keyboard -->
-        <span>Middle D</span>
+        <span class="sound">Middle D</span>
       </div>
       <div class="key">
         <kbd>D</kbd>
         <!-- Create keyboard -->
-        <span>Middle E</span>
+        <span class="sound">Middle E</span>
       </div>
       <div class="key">
         <kbd>F</kbd>
         <!-- Create keyboard -->
-        <span>Middle F</span>
+        <span class="sound">Middle F</span>
       </div>
       <div class="key">
         <kbd>G</kbd>
         <!-- Create keyboard -->
-        <span>Middle G</span>
+        <span class="sound">Middle G</span>
       </div>
       <div class="key">
         <kbd>H</kbd>
         <!-- Create keyboard -->
-        <span>Middle A</span>
+        <span class="sound">Middle A</span>
       </div>
       <div class="key">
         <kbd>J</kbd>
         <!-- Create keyboard -->
-        <span>Middle B</span>
+        <span class="sound">Middle B</span>
       </div>
       <div class="key">
         <kbd>K</kbd>
         <!-- Create keyboard -->
-        <span>C<sub>5</sub></span>
+        <span class="sound">C<sub>5</sub></span>
       </div>
     </main>
     <section>
