Add problem 1 on the READMe.md

--- a/day_01/index.html
+++ b/day_01/index.html
@@ -45,7 +45,7 @@
       <div class="key">
         <kbd>K</kbd>
         <!-- Create keyboard -->
-        <span class="sound">C<sub>5</sub></span>
+        <span class="sound">High C</sub></span>
       </div>
     </main>
     <section>
