--- a/day_01/index.html
+++ b/day_01/index.html
@@ -7,62 +7,56 @@
   </head>
   <body>
     <main class="keyboard-keys">
-      <div class="key">
+      <div data-key="a" class="key">
         <kbd>A</kbd>
         <!-- Create keyboard -->
         <span class="sound">Middle C</span>
       </div>
-      <div class="key">
+      <div data-key="s" class="key">
         <kbd>S</kbd>
         <!-- Create keyboard -->
         <span class="sound">Middle D</span>
       </div>
-      <div class="key">
+      <div  data-key="d" class="key">
         <kbd>D</kbd>
         <!-- Create keyboard -->
         <span class="sound">Middle E</span>
       </div>
-      <div class="key">
+      <div  data-key="f" class="key">
         <kbd>F</kbd>
         <!-- Create keyboard -->
         <span class="sound">Middle F</span>
       </div>
-      <div class="key">
+      <div data-key="g" class="key">
         <kbd>G</kbd>
         <!-- Create keyboard -->
         <span class="sound">Middle G</span>
       </div>
-      <div class="key">
+      <div data-key="h" class="key">
         <kbd>H</kbd>
         <!-- Create keyboard -->
         <span class="sound">Middle A</span>
       </div>
-      <div class="key">
+      <div data-key="j" class="key">
         <kbd>J</kbd>
         <!-- Create keyboard -->
         <span class="sound">Middle B</span>
       </div>
-      <div class="key">
+      <div data-key="k" class="key">
         <kbd>K</kbd>
         <!-- Create keyboard -->
         <span class="sound">High C</sub></span>
       </div>
     </main>
     <section>
-      <audio controls src="./public/sounds/middle_c.mp3"></audio>
-      <audio controls src="./public/sounds/middle_c.mp3"></audio>
-
-      <audio controls src="./public/sounds/middle_c.mp3"></audio>
-
-      <audio controls src="./public/sounds/middle_c.mp3"></audio>
-
-      <audio controls src="./public/sounds/middle_c.mp3"></audio>
-
-      <audio controls src="./public/sounds/middle_c.mp3"></audio>
-
-      <audio controls src="./public/sounds/middle_c.mp3"></audio>
-
-      <audio controls src="./public/sounds/middle_c.mp3"></audio>
+      <audio data-key="a" src="./public/sounds/middle_c.mp3"></audio>
+      <audio data-key="s" src="./public/sounds/middle_c.mp3"></audio>
+      <audio data-key="d" src="./public/sounds/middle_c.mp3"></audio>
+      <audio data-key="f`" src="./public/sounds/middle_c.mp3"></audio>
+      <audio data-key="g" src="./public/sounds/middle_c.mp3"></audio>
+      <audio data-key="h" src="./public/sounds/middle_c.mp3"></audio>
+      <audio data-key="j" src="./public/sounds/middle_c.mp3"></audio>
+      <audio data-key="k" src="./public/sounds/middle_c.mp3"></audio>
     </section>
   </body>
 </html>
