--- a/day_01/index.html
+++ b/day_01/index.html
@@ -50,13 +50,16 @@
     </main>
     <section>
       <audio data-key="a" src="./public/sounds/middle_c.mp3"></audio>
-      <audio data-key="s" src="./public/sounds/middle_c.mp3"></audio>
-      <audio data-key="d" src="./public/sounds/middle_c.mp3"></audio>
-      <audio data-key="f`" src="./public/sounds/middle_c.mp3"></audio>
-      <audio data-key="g" src="./public/sounds/middle_c.mp3"></audio>
-      <audio data-key="h" src="./public/sounds/middle_c.mp3"></audio>
-      <audio data-key="j" src="./public/sounds/middle_c.mp3"></audio>
-      <audio data-key="k" src="./public/sounds/middle_c.mp3"></audio>
+      <audio data-key="s" src="./public/sounds/middle_d.mp3"></audio>
+      <audio data-key="d" src="./public/sounds/middle_e.mp3"></audio>
+      <audio data-key="f" src="./public/sounds/middle_f.mp3"></audio>
+      <audio data-key="g" src="./public/sounds/middle_g.mp3"></audio>
+      <audio data-key="h" src="./public/sounds/middle_a.mp3"></audio>
+      <audio data-key="j" src="./public/sounds/middle_b.mp3"></audio>
+      <audio data-key="k" src="./public/sounds/high_c.mp3"></audio>
     </section>
   </body>
+  <script src="./public/js/app.js">
+
+  </script>
 </html>
